force-app/main/default/objects/DHS_Contact__c/DHS_Contact__c.object-meta.xml
<CustomObject>
    <label>Contact</label>
    <nameField>
        <displayFormat>Contact-{000000}</displayFormat>
        <label>Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>