force-app/main/default/objects/DHS_Contact__c/listViews/DHS_All.listView-meta.xml
<ListView>
    <fullName>DHS_All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Phone__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Everything</filterScope>
    <label>DHS_All</label>
</ListView>